Deployment 2021-06-17 05:29 PM Admin User/Add Designer Job to Careers Page

--- a/templates/site_config.json
+++ b/templates/site_config.json
@@ -3,6 +3,7 @@
     { "name": "Main Menu", "tag": "main", "max_depth": 2 },
     { "name": "Footer Menu", "tag": "footer" }
   ],
+  "url_prefix": "/october/",
   "defaultEditorConfig": {
     "materialIcons": true
   }
